2004-05-07  Andreas Kupries  <andreask@activestate.com>

	* New module: png querying and manipulation.

2004-05-04  Andreas Kupries  <andreask@activestate.com>

	* install_action.tcl: Fixed [SF Tcllib Bug 784519]. Loading the
	  proper doctools directly, and not using the package system. The
	  latter may get confused and try to load the wrong (old) package.

2004-04-27  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: Added new module.
	* examples/ldap:
	* modules/ldap: New module: LDAP client. Provided to us by Joechen
	  Loewer <loewerj@web.de>.
	
2004-04-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Some mods to the critcl build code for use under
	Windows. If it cannot find critcl.kit, then use env(CRITCL) for
	the location of the kit file.

2004-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples/csv/csv2html.orig:		Unified the startup header of all
	* examples/csv/csvcut.orig:		applications, using suggestions
	* examples/csv/csvdiff.orig:		made by Stuart Cassoff <stwo@telus.net>.
	* examples/csv/csvjoin.orig:
	* examples/csv/csvsort.orig:
	* examples/csv/csvuniq.orig:
	* examples/ftp/ftpdemo.tcl.orig:
	* examples/ftp/ftpvalid.orig:
	* examples/ftp/hpupdate.tcl.orig:
	* examples/ftp/mirror.tcl.orig:
	* examples/ftp/newer.tcl.orig:
	* examples/ftpd/ftpd.orig:
	* examples/ftpd/ftpd.test.orig:
	* examples/ftpd/ftpd.unix.orig:
	* examples/irc/irc_example.tcl.orig:
	* examples/mime/mbot/README.html.orig:
	* examples/mime/mbot/README.txt.orig:
	* examples/mime/mbot/README.xml.orig:
	* examples/mime/mbot/impersonal.tcl.orig:
	* examples/mime/mbot/personal.tcl.orig:
	* examples/nntp/postnews.orig:
	* examples/oreilly-oscon2001/oscon.orig:
	* examples/smtpd/tcl_smtpd.orig:
	* examples/smtpd/tk_smtpd.orig:
	* examples/smtpd/tk_smtpdMIME.orig:
	* modules/des/des.tcl.orig:
	* modules/devtools/musub.tcl.orig:
	* modules/doctools/mpexpand.orig:
	* modules/doctools/mpexpand.all.orig: