@@ -1,0 +1,4 @@
+2004-05-07  Andreas Kupries <andreas_kupries@users.sourceforge.net>
+
+	* New module for querying JPEG images, and manipulating their
+	  comments.
